--- a/src/components/TableSetUp/styles.css
+++ b/src/components/TableSetUp/styles.css
@@ -1,3 +1,9 @@
+:root {
+  --blue: #d9ad7c !important;
+  --green: #a2836e !important;
+  --brown: #674d3c !important;
+}
+
 .App {
     font-family: sans-serif;
     text-align: center;
@@ -18,92 +24,96 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    gap: 10px 10px;
+    gap: 30px 30px;
     grid-template-areas:
-      "tableOf4_1 tableOf4_1 tableOf6_1 tableOf2_1 tableOf4_4 tableOf4_4"
-      "tableOf4_1 tableOf4_1 tableOf6_1 tableOf2_1 tableOf4_4 tableOf4_4"
-      "tableOf4_1 tableOf4_1 tableOf6_1 tableOf2_2 tableOf4_4 tableOf4_4"
-      "tableOf4_1 tableOf4_1 tableOf6_1 tableOf2_2 tableOf4_4 tableOf4_4"
-      "tableOf4_2 tableOf4_2 tableOf6_1 tableOf2_3 tableOf4_5 tableOf4_5"
-      "tableOf4_2 tableOf4_2 tableOf6_1 tableOf2_3 tableOf4_5 tableOf4_5"
-      "tableOf4_2 tableOf4_2 tableOf6_2 tableOf2_4 tableOf4_5 tableOf4_5"
-      "tableOf4_2 tableOf4_2 tableOf6_2 tableOf2_4 tableOf4_5 tableOf4_5"
-      "tableOf4_3 tableOf4_3 tableOf6_2 tableOf2_5 tableOf4_6 tableOf4_6"
-      "tableOf4_3 tableOf4_3 tableOf6_2 tableOf2_5 tableOf4_6 tableOf4_6"
-      "tableOf4_3 tableOf4_3 tableOf6_2 tableOf2_6 tableOf4_6 tableOf4_6"
-      "tableOf4_3 tableOf4_3 tableOf6_2 tableOf2_6 tableOf4_6 tableOf4_6";
+      "tableOf4_1 tableOf4_1 tableOf6_4 tableOf2_1 tableOf4_4 tableOf4_4"
+      "tableOf4_1 tableOf4_1 tableOf6_4 tableOf2_1 tableOf4_4 tableOf4_4"
+      "tableOf4_1 tableOf4_1 tableOf6_4 tableOf2_2 tableOf4_4 tableOf4_4"
+      "tableOf4_1 tableOf4_1 tableOf6_4 tableOf2_2 tableOf4_4 tableOf4_4"
+      "tableOf4_2 tableOf4_2 tableOf6_4 tableOf2_3 tableOf4_5 tableOf4_5"
+      "tableOf4_2 tableOf4_2 tableOf6_4 tableOf2_3 tableOf4_5 tableOf4_5"
+      "tableOf4_2 tableOf4_2 tableOf6_5 tableOf2_4 tableOf4_5 tableOf4_5"
+      "tableOf4_2 tableOf4_2 tableOf6_5 tableOf2_4 tableOf4_5 tableOf4_5"
+      "tableOf4_3 tableOf4_3 tableOf6_5 tableOf2_5 tableOf4_6 tableOf4_6"
+      "tableOf4_3 tableOf4_3 tableOf6_5 tableOf2_5 tableOf4_6 tableOf4_6"
+      "tableOf4_3 tableOf4_3 tableOf6_5 tableOf2_6 tableOf4_6 tableOf4_6"
+      "tableOf4_3 tableOf4_3 tableOf6_5 tableOf2_6 tableOf4_6 tableOf4_6";
   }
 
   #tableOf4_1{
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_1;
   }
 
   #tableOf4_2 {
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_2;
   }
 
   #tableOf4_3 {
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_3;
   }
 
   #tableOf4_4 {
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_4;
   }
 
   #tableOf4_5 {
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_5;
   }
 
   #tableOf4_6 {
-    background-color: #3e7086;
+    background-color: var(--blue);
     grid-area: tableOf4_6;
   }
   
-  #tableOf6_1 {
-    background-color: #c4ac87;
-    grid-area: tableOf6_1;
+  #tableOf6_4 {
+    background-color: var(--brown);
+    grid-area: tableOf6_4;
   }
 
-  #tableOf6_2 {
-    background-color: #c4ac87;
-    grid-area: tableOf6_2;
+  #tableOf6_5 {
+    background-color: var(--brown);
+    grid-area: tableOf6_5;
   }
 
   #tableOf2_1 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_1; 
   }
 
   #tableOf2_2 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_2;
   }
 
   #tableOf2_3 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_3; 
   }
 
   #tableOf2_4 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_4;
   }
 
   #tableOf2_5 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_5;
   }
 
   #tableOf2_6 {
-    background-color: #76863e;
+    background-color: var(--green);
     grid-area: tableOf2_6;
   }
 
-  .reserved{
-    background-color: black;
+  .unavailable{
+    opacity: 30%;
+  }
+
+  .booked{
+    box-shadow: rgba(217, 173, 124, 0.4) 5px 5px, rgba(217, 173, 124, 0.3) 10px 10px, rgba(217, 173, 124, 0.2) 15px 15px;
   }
